# api-clients-automation

./: .codacy.yml  .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .gitmodules  .lintstagedrc  .lintstagedrc.mjs  .php-cs-fixer.cache  .prettierignore  .prettierrc  .redocly.yaml  .release-please-manifest.json  .yamllint  .yarnrc.yml  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  FOLLOWUP-swift-dart-transformation-guides.md  README.md  app.ts  base.tsconfig.json  clients.config.json  config.json  docker-compose.yml  eslint.config.js  eslint.config.mjs  mise.toml  netlify.toml  openapitools.json  out.txt  oxlintrc.json  package.json  redocly.yaml  release-please-config.json  release.config.json  renovate.json  (+2 more)
clients/algoliasearch-client-python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
clients/algoliasearch-client-python/.github/workflows/: release.yml
clients/algoliasearch-client-python/algoliasearch/: __init__.py  configs.py  exceptions.py  helpers.py  insights_client.py  request_options.py  user_agent.py  version.py
clients/algoliasearch-client-python/algoliasearch/abtesting/: __init__.py  client.py
clients/algoliasearch-client-python/algoliasearch/agent_studio/: client.py  config.py
clients/algoliasearch-client-python/algoliasearch/algoliasearch/: __init__.py
clients/algoliasearch-client-python/algoliasearch/algoliasearch.insights/: __init__.py
clients/algoliasearch-client-python/algoliasearch/algoliasearch.recommend/: __init__.py
clients/algoliasearch-client-python/algoliasearch/algoliasearch.search/: __init__.py
clients/algoliasearch-client-python/algoliasearch/http/: api_response.py  base_config.py  helper.py  helpers.py  hosts.py  request_options.py  requester.py  requester_async.py  serializer.py  sse.py  transporter.py  transporter_async.py  transporter_sync.py  user_agent.py  verb.py
clients/algoliasearch-client-python/algoliasearch/ingestion/: client.py
clients/algoliasearch-client-python/algoliasearch/insights/: add_to_cart_event.py  added_to_cart_object_ids.py  added_to_cart_object_ids_after_search.py  click_event.py  clicked_filters.py  clicked_object_ids.py  clicked_object_ids_after_search.py  conversion_event.py  converted_filters.py  converted_object_ids.py  converted_object_ids_after_search.py  discount.py  error_base.py  events_items.py  events_response.py  insights_client.py  insights_events.py  object_data.py  object_data_after_search.py  price.py  purchase_event.py  purchased_object_ids.py  purchased_object_ids_after_search.py  view_event.py  viewed_filters.py  viewed_object_ids.py
clients/algoliasearch-client-python/algoliasearch/monitoring/: client.py
clients/algoliasearch-client-python/algoliasearch/personalization/: __init__.py
clients/algoliasearch-client-python/algoliasearch/recommend/: advanced_syntax_features.py  alternatives_as_exact.py  anchoring.py  around_precision.py  around_precision_from_value_inner.py  around_radius.py  around_radius_all.py  automatic_facet_filter.py  automatic_facet_filters.py  base_recommend_request.py  base_recommendations_query.py  base_search_params.py  base_search_params_without_query.py  base_search_response.py  base_trending_facets_query.py  base_trending_items_query.py  condition.py  consequence.py  consequence_hide.py  consequence_params.py  consequence_query.py  consequence_query_object.py  deleted_at_response.py  distinct.py  edit.py  edit_type.py  error_base.py  exact_on_single_word_query.py  exhaustive.py  facet_filters.py  facet_ordering.py  facets.py  facets_stats.py  get_recommend_task_response.py  get_recommendations_params.py  get_recommendations_response.py  highlight_result.py  highlight_result_option.py  ignore_plurals.py  index_settings_as_search_params.py  (+47 more)
clients/algoliasearch-client-python/algoliasearch/search/: __init__.py  acl.py  action.py  add_api_key_response.py  advanced_syntax_features.py  alternatives_as_exact.py  anchoring.py  api_key.py  around_precision.py  around_precision_from_value_inner.py  around_radius.py  around_radius_all.py  assign_user_id_params.py  attribute_to_update.py  automatic_facet_filter.py  automatic_facet_filters.py  base_get_api_key_response.py  base_index_settings.py  base_search_params.py  base_search_params_without_query.py  base_search_response.py  batch_assign_user_ids_params.py  batch_dictionary_entries_params.py  batch_dictionary_entries_request.py  batch_params.py  (+141 more)
clients/algoliasearch-client-python/search/: __init__.py
docs/guides/python/: abTestImplementationChecklist.py  compression.py  deleteMultipleIndices.py  enableFilterPromote.py  globalAlgoliaUserID.py  globalAlgoliaUserToken.py  mcmSearchWithout.py  pushSetup.py  pyproject.toml  saveImageClassifications.py  saveImageClassificationsAndSettings.py  saveObjectsChunks.py  saveObjectsMCM.py  saveObjectsModified.py  saveObjectsMovies.py  saveObjectsPublicUser.py  savePopularRecords.py  searchFuturePublishedBooks.py  searchInReplicaIndex.py  searchRecentlyPublishedBooks.py  searchWithAnalyticsAndHeader.py  searchWithGAToken.py  searchWithLogicalOr.py  searchWithOptionalFilters.py  searchWithRuleContextBuyer.py  searchWithRuleContexts.py  setHeaderUserIDThenSaveObjects.py  setSettingsThenSaveObjects.py  setUpTransformationOptions.py  setUpTransformationOptionsWithOverrides.py  useConditionlessRule.py
docs/snippets/python/: abtesting.py  abtesting_v3.py  agent_studio.py  analytics.py  composition.py  ingestion.py  insights.py  monitoring.py  personalization.py  pyproject.toml  query_suggestions.py  recommend.py  search.py
playground/python/: README.md  pyproject.toml  requirements.txt
playground/python/app/: abtesting.py  agent_studio.py  agent_studio_streaming.py  analytics.py  ingestion.py  insights.py  personalization.py  query_suggestions.py  recommend.py  search.py
snippets/python/: abtesting.py  analytics.py  ingestion.py  insights.py  monitoring.py  personalization.py  pyproject.toml  query_suggestions.py  recommend.py  search.py  usage.py
tests/output/python/: pyproject.toml  requirements.txt
(+9910 files in other folders)
