[project]
name = "algoliasearch"
version = "4.0.0-alpha.01"
authors = [
    { name = "Algolia Team", email = "support@algolia.com" }
]
maintainers = [
    { name = "Algolia Team", email = "support@algolia.com" }
]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
description = "Algolia Search API Client for Python."
keywords = ["algolia", "search", "full-text-search", "neural-search"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
homepage = "https://github.com/algolia/algoliasearch-client-python"

[project.dependencies]
requests = ">=2.21,<3.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.build]
include = ["**/*"]

[tool.wheel]
universal = 1
