[tool.poetry]
name = "app"
version = "0.0.1"
description = "playground for the algoliasearch-client-python repository"
authors = ["Algolia Team <https://support.algolia.com/hc/en-us/requests/new>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/api-clients-automation"

[tool.poetry.dependencies]
python = "3.11.6"
algoliasearch = { path = "../../clients/algoliasearch-client-python", develop = true }
flake8 = "6.1.0"
autoflake = "2.2.1"
autopep8 = "2.0.4"
black = "24.3.0"
isort = "5.13.0"
python-dotenv = "1.0.0"

[tool.poetry.scripts]
search = "app.search:main"
recommend = "app.recommend:main"
ingestion = "app.ingestion:main"
insights = "app.insights:main"
query-suggestions = "app.query_suggestions:main"
abtesting = "app.abtesting:main"
analytics = "app.analytics:main"
personalization = "app.personalization:main"
