[tool.poetry]
name = "app"
version = "0.0.1"
description = "playground for the algoliasearch-client-python repository"
authors = ["Algolia Team <https://alg.li/support>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/api-clients-automation"

[tool.poetry.dependencies]
python = ">= 3.8.1"
algoliasearch = { path = "../../clients/algoliasearch-client-python", develop = true }
ruff = "== 0.14.1"
pyright = "== 1.1.406"
python-dotenv = "== 1.0.1"

[tool.poetry.scripts]
search = "app.search:main"
recommend = "app.recommend:main"
ingestion = "app.ingestion:main"
insights = "app.insights:main"
query-suggestions = "app.query_suggestions:main"
abtesting = "app.abtesting:main"
analytics = "app.analytics:main"
personalization = "app.personalization:main"
