[tool.poetry]
name = "snippets"
version = "0.0.1"
description = "snippets for the python api client"
authors = ["Algolia Team <https://support.algolia.com/hc/en-us/requests/new>"]
license = "MIT"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/api-clients-automation"

[tool.poetry.dependencies]
python = "3.11.6"
algoliasearch = { path = "../../clients/algoliasearch-client-python", develop = true }
flake8 = "6.1.0"
autoflake = "2.2.1"
autopep8 = "2.0.4"
black = "24.3.0"
isort = "5.13.0"
