[tool.poetry]
name = "guides"
version = "0.0.1"
description = "guides for the python api client"
authors = ["Algolia Team <https://alg.li/support>"]
license = "MIT"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/api-clients-automation"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8.1"
algoliasearch = { path = "../../../clients/algoliasearch-client-python", develop = true }
ruff = "== 0.9.1"
pyright = "== 1.1.391"
