[tool.poetry]
name = "tests"
version = "0.0.1"
description = "common test suite for the Python API client"
authors = ["Algolia Team <support@algolia.com>"]
license = "MIT"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/api-clients-automation"

[tool.poetry.dependencies]
python = "3.11.6"
algoliasearch = { path = "../../../clients/algoliasearch-client-python", develop = true }
flake8 = "6.1.0"
autoflake = "2.2.1"
autopep8 = "2.0.4"
black = "24.3.0"
isort = "5.13.0"
pytest = "7.4.3"
python-dotenv = "1.0.0"
pytest-aiohttp = "1.0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [ "tests" ]
