[tool.poetry]
name = "tests"
version = "0.0.1"
description = "common test suite for the Python API client"
authors = ["Algolia Team"]
license = "MIT"
homepage = "https://www.algolia.com"
repository = "https://github.com/algolia/api-clients-automation"

[tool.poetry.dependencies]
python = "^3.8.1"
algoliasearch = { path = "../../../clients/algoliasearch-client-python", develop = true }
ruff = "== 0.14.1"
pyright = "== 1.1.406"
pytest = "=8.3.5"
python-dotenv = "=1.0.1"
pytest-aiohttp = "=1.0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
unsafe-fixes = true
